# educational-projects

./: .gitignore  README.md
python/password-complexity-checker/: .gitignore  README.md  launcher.py  pyproject.toml
python/password-complexity-checker/src/password_checker/: __init__.py  cli.py  config.py  core.py  utils.py
python/password-complexity-checker/src/password_checker/core/: checker.py
python/password-complexity-checker/src/password_checker/dev/: generator.py  passphrase_generator.py  pin_generator.py  wordlist.txt
python/password-tool/: .gitignore  README.md  pyproject.toml
python/password-tool/src/password_tool/: __init__.py  __main__.py  cli.py  config.py  utils.py
python/password-tool/src/password_tool/core/: checker.py  gui.py  pass_generator.py  phrase_generator.py  pin_generator.py  qt.py
